--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-chartio==6.0.1
-matplotlib==3.8.0
-numpy==2.0.1
-pandas==2.2.2
-scikit_learn==1.3.2
-scipy==1.14.0
-setuptools==68.0.0
-umap_learn==0.5.5
+matplotlib
+numpy
+pandas
+scikit_learn
+scipy
+setuptools
+umap_learn
